# pets-seminar-01

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/skills/: README.md
.claude/skills/case-study/: SKILL.md
.github/workflows/: ci.yml  pages.yml
data/case01_pseudonymized/raw/: customers.csv  purchases.csv  web_access.csv
data/case02_anonymized/raw/: customers.csv  purchases.csv  transactions.csv
docs/: cheatsheet.md  cheatsheet_case02.md  glossary.md  index.md  spec.md
docs/case01_pseudonymized/: 00_requirements.md  01_case_summary.md  02_dummy_data_spec.md  03_table_definition_before.md  04_column_classification.md  05_processing_design.md  06_processing_spec.md  07_table_definition_after.md  08_notebook_spec.md  09_results.md  notebook.md
docs/case02_anonymized/: 01_case_summary.md  02_dummy_data_spec.md  03_table_definition_before.md  04_column_classification.md  05_processing_design.md  06_processing_spec.md  07_table_definition_after.md  08_notebook_spec.md  09_results.md  README.md  notebook.md
docs/references/: README.md
docs/stylesheets/: extra.css  print.css
notebooks/: case01_pseudonymized.ipynb  case02_anonymized.ipynb
src/dummy_data/: case01_pseudonymized.py  case02_anonymized.py
tests/: test_case01_dummy_data.py  test_case01_results.py  test_case02_dummy_data.py  test_case02_results.py
